Regression: Loop Cut Tool becomes impressive with modifiers #104347

Closed
opened 2023-02-04 18:52:49 +07:00 by Julien Kaspar · 13 comments

System Information
Operating system: Linux-6.1.9-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.85.05

Blender Version
Broken: version: 3.5.0 Alpha, branch: HEAD (modified), commit date: 2023-02-03 17:51, hash: b454416927
Worked: (newest version of Blender that worked as expected)

Short description of error
When using the Loop Cut tool in edit mode on an object that has modifiers enabled, the tools doesn't seem to properly update and inserting cuts becomes increasingly difficult.
This is not an issue with the regular loop cut shortcut operator on Ctrl R.
loop_cut_bug2.mp4

Exact steps for others to reproduce the error

  • Add a cube and add a subdiv modifier
  • Enter edit mode and make the Loop Cut tool active in the toolbar
  • Quickly add multiple cuts (Notice the issue)
  • Toggle edit mode or toggle Xray shading to fix the issue
**System Information** Operating system: Linux-6.1.9-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.85.05 **Blender Version** Broken: version: 3.5.0 Alpha, branch: HEAD (modified), commit date: 2023-02-03 17:51, hash: `b454416927` Worked: (newest version of Blender that worked as expected) **Short description of error** When using the Loop Cut tool in edit mode on an object that has modifiers enabled, the tools doesn't seem to properly update and inserting cuts becomes increasingly difficult. This is not an issue with the regular loop cut shortcut operator on `Ctrl R`. [loop_cut_bug2.mp4](/attachments/31b57b99-8fc6-4c76-b2ff-212d66587328) **Exact steps for others to reproduce the error** - Add a cube and add a subdiv modifier - Enter edit mode and make the Loop Cut tool active in the toolbar - Quickly add multiple cuts (Notice the issue) - Toggle edit mode or toggle Xray shading to fix the issue
Poster
Collaborator

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Seems to be working fine here... but I'm on windows... blender-3.5.0-alpha+master.06305e5ca800-windows.amd64-release

blender_nC0hGzMnxH.mp4

Seems to be working fine here... but I'm on windows... blender-3.5.0-alpha+master.06305e5ca800-windows.amd64-release [blender_nC0hGzMnxH.mp4](https://archive.blender.org/developer/F14244150/blender_nC0hGzMnxH.mp4)

Added subscribers: @lichtwerk, @mano-wii

Added subscribers: @lichtwerk, @mano-wii

I can't repro either.
Could it be related to Linux?
@lichtwerk, can you check?

I can't repro either. Could it be related to `Linux`? @lichtwerk, can you check?

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Unable to replicate either. Could be a platform specific issue.

branch: HEAD (modified)

@JulienKaspar , can you check whether this happens in latest buildbot build?

Unable to replicate either. Could be a platform specific issue. > branch: HEAD (modified) @JulienKaspar , can you check whether this happens in latest buildbot build?

Cant repro either

Cant repro either
Poster
Collaborator

I am able to pretty reliably reproduce the bug on linux machines here at the studio.

Fast clicking seems to cause the bug to happen easier.
I attached a video where I caused it 3 times in succession that way.
On fast clicking the yellow line overlay disappears and I am unable to make new cuts.

loop_cut_bug2.mp4

I am able to pretty reliably reproduce the bug on linux machines here at the studio. Fast clicking seems to cause the bug to happen easier. I attached a video where I caused it 3 times in succession that way. On fast clicking the yellow line overlay disappears and I am unable to make new cuts. [loop_cut_bug2.mp4](/attachments/31b57b99-8fc6-4c76-b2ff-212d66587328)
Germano Cavalcante added
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-02-09 17:27:12 +07:00
Poster
Collaborator

@mano-wii @lichtwerk @PratikPB2123 Isn't this a regression and should be set to High Priority?

@mano-wii @lichtwerk @PratikPB2123 Isn't this a regression and should be set to High Priority?

I wasnt able to repro, but yes, if it is a regression, then it should be High prio.
@mano-wii : would you be able to bisect this?

I wasnt able to repro, but yes, if it is a regression, then it should be High prio. @mano-wii : would you be able to bisect this?

I'm not sure we can call it a regression.
Happens only with GPU Subdivision and since GPU Subdivision was implemented.

Investigating...

I'm not sure we can call it a regression. Happens only with `GPU Subdivision` and since `GPU Subdivision` was implemented. Investigating...
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-17 14:30:42 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104347
There is no content yet.